--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,7 +40,7 @@
         <div class="max-w-4xl mx-auto glass p-10 rounded-3xl shadow-xl text-center">
             <h3 class="text-3xl font-semibold mb-6 text-indigo-600 dark:text-pink-400">Appreciation Letter</h3>
             <p class="text-gray-700 dark:text-black-300 leading-relaxed">
-                Thank you for believing in us, as your students. You guide us patiently and inspire us every day. Your lessons are more like a books that truly touch hearts.
+                Thank you for believing in us even though sometimes we are very naughty. As your students, we are grateful we have an adviser like you. You guide us patiently and inspire us every day. Your lessons are more than anyone else's; it's like a book that truly touches hearts and teaches us lessons that really help us for a better future.
             </p>
         </div>
     </section>
@@ -69,7 +69,7 @@
             <a id="downloadBtn" class="btn-download" download>Download ↓ </a>
         </div>
     </div>
-    <footer class="text-center py-10 text-gray-600 dark:text-gray-400">
+    <footer class="text-center py-10 text-gray-600 dark:text-black-400">
         Made with HTML, CSS, JavaScript
     </footer>
     <audio id="bgMusic" loop>
